# expected

./: CMakeLists.txt  README.md
.github/workflows/: tests.yml
tests/install/: CMakeLists.txt  main.cpp
